rust/message-backup/tests/res/test-cases/valid-encrypted/legacy-account.binproto.encrypted.source.jsonproto
[
    {
        "backupTimeMs": "1705692409729",
        "version": "1",
        "mediaRootBackupKey": "q6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6s=",
    },
    {
        "account": {
            "profileKey": "YQKRq+3DQklInaOaMcmlzZnN0m/1hzLiaONX7gB12dg=",
            "accountSettings": {
                "phoneNumberSharingMode": "NOBODY"
            }
        }
    },
    {
        "recipient": {
        "id": "2",
        "self": {}
        }
    },
    {
        "chat": {
        "id": "1",
        "recipientId": "2"
        }
    }
]