rust/message-backup/tests/res/test-cases/invalid/missing-recipient.jsonproto
[
  {
    "version": "1",
    "backupTimeMs": "1705692409729"
  },
  {
    "recipient": {
      "id": "1",
      "self": {}
    }
  },
  {
    "chat": {
      "id": "1",
      "recipientId": "2"
    }
  }
]